--- a/MadAboutMillie/MadAboutMillie.html
+++ b/MadAboutMillie/MadAboutMillie.html
@@ -3,15 +3,16 @@
 <head>
 <meta charset="utf-8">
 <link rel="stylesheet" href="../ZimStyles.css">
-<title>Life With Millie</title>
+<title>Mad About Millie</title>
 </head>
 
 <body>
-Life With Millie<br>
-<img src="LifeWithMillie.jpg"> <br>
+Mad About Millie<br>
+<img src="MadAboutMillie.jpg"> <br>
+Series: 16 issues 1969-1970<br>
 Publisher: Marvel<br>
 <p>
-Continues from <a href="https://blzim.github.io/kb/Creation/DateWithMillie/DateWithMillie.html">A Date With Millie</a> (#1-7).
+Another Millie the Model title, this one done in an Archies rip-off style.
 </p><p>
 Related Titles:<ul>
 <li>Millie the Model #1-207 (1945-1973)</li>
