--- a/MadAboutMillie/MadAboutMillie.html
+++ b/MadAboutMillie/MadAboutMillie.html
@@ -12,20 +12,20 @@ Mad About Millie<br>
 Series: 16 issues 1969-1970<br>
 Publisher: Marvel<br>
 <p>
-Another Millie the Model title, this one done in an Archies rip-off style.
+Another Millie the Model title, this one with Archies artist Stan Goldberg.
 </p><p>
 Related Titles:<ul>
-<li>Millie the Model #1-207 (1945-1973)</li>
+<li><a href="https://blzimg.github.io/MillieTheModel/MillieTheModel.html">Millie the Model</a> #1-207 (1945-1973)</li>
 <li><a href="https://blzim.github.io/kb/Creation/DateWithMillie/DateWithMillie.html">A Date with Millie</a> #1–7 (1956–1957)</li>
 <li><a href="https://blzim.github.io/kb/Creation/DateWithMillie/DateWithMillie.html">A Date with Millie</a> vol. 2, #1–7 (1959–1960)</li>
 <li><a href="https://blzimg.github.io/LifeWithMillie/LifeWithMillie.html">Life With Millie</a> #8–20 (1960-1962)</li>
-<li>Modelling with Millie #21–54 (1963–1967)</li>
+<li><a href="https://blzimg.github.io/LifeWithMillie/LifeWithMillie.html">Modelling with Millie</a> #21–54 (1963–1967)</li>
 <li><a href="https://blzimg.github.io/MadAboutMillie/MadAboutMillie.html">Mad about Millie</a> #1–17 (1969–1970)</li>
 <li><a href="https://blzimg.github.io/MadAboutMillie/MadAboutMillie.html">Mad about Millie Annual</a> #1 (1971)</li>
 <li><a href="https://blzim.github.io/kb/Creation/Chili/Chili.html">Chili, Millie's Rival</a> #1–26 (1969–1973)</li>
 <li><a href="https://blzim.github.io/kb/Creation/Chili/Chili.html">Chili, Millie's Rival Special #1 (1971)</a></li>
-<li>Millie the Model Annual #1–10 (1962–1971)</li>
-<li>Queen-Size Millie the Model #11-12 (1974–1975)</li>
+<li><a href="https://blzimg.github.io/MillieTheModel/MillieTheModel.html">Millie the Model Annual</a> #1–10 (1962–1971)</li>
+<li><a href="https://blzimg.github.io/MillieTheModel/MillieTheModel.html">Queen-Size Millie the Model</a> #11-12 (1974–1975)</li>
 </ul>
 </p>
 </body>
