--- a/LifeWithMillie/LifeWithMillie.html
+++ b/LifeWithMillie/LifeWithMillie.html
@@ -8,23 +8,23 @@
 
 <body>
 Life With Millie<br>
-<img src="LifeWithMillie.jpg"> <br>
+<img src="LifeWithMillie.jpg"> <img src="ModelingWithMillie.jpg"><br>
 Publisher: Marvel<br>
 <p>
-Continues from <a href="https://blzim.github.io/kb/Creation/DateWithMillie/DateWithMillie.html">A Date With Millie</a> (#1-7).
+Continues from <a href="https://blzim.github.io/kb/Creation/DateWithMillie/DateWithMillie.html">A Date With Millie</a> (#1-7), and becomes Modeling with Millie at issue #21.
 </p><p>
 Related Titles:<ul>
-<li>Millie the Model #1-207 (1945-1973)</li>
+<li><a href="https://blzimg.github.io/MillieTheModel/MillieTheModel.html">Millie the Model</a> #1-207 (1945-1973)</li>
 <li><a href="https://blzim.github.io/kb/Creation/DateWithMillie/DateWithMillie.html">A Date with Millie</a> #1–7 (1956–1957)</li>
 <li><a href="https://blzim.github.io/kb/Creation/DateWithMillie/DateWithMillie.html">A Date with Millie</a> vol. 2, #1–7 (1959–1960)</li>
 <li><a href="https://blzimg.github.io/LifeWithMillie/LifeWithMillie.html">Life With Millie</a> #8–20 (1960-1962)</li>
-<li>Modelling with Millie #21–54 (1963–1967)</li>
+<li><a href="https://blzimg.github.io/LifeWithMillie/LifeWithMillie.html">Modelling with Millie</a> #21–54 (1963–1967)</li>
 <li><a href="https://blzimg.github.io/MadAboutMillie/MadAboutMillie.html">Mad about Millie</a> #1–17 (1969–1970)</li>
 <li><a href="https://blzimg.github.io/MadAboutMillie/MadAboutMillie.html">Mad about Millie Annual</a> #1 (1971)</li>
 <li><a href="https://blzim.github.io/kb/Creation/Chili/Chili.html">Chili, Millie's Rival</a> #1–26 (1969–1973)</li>
 <li><a href="https://blzim.github.io/kb/Creation/Chili/Chili.html">Chili, Millie's Rival Special #1 (1971)</a></li>
-<li>Millie the Model Annual #1–10 (1962–1971)</li>
-<li>Queen-Size Millie the Model #11-12 (1974–1975)</li>
+<li><a href="https://blzimg.github.io/MillieTheModel/MillieTheModel.html">Millie the Model Annual</a> #1–10 (1962–1971)</li>
+<li><a href="https://blzimg.github.io/MillieTheModel/MillieTheModel.html">Queen-Size Millie the Model</a> #11-12 (1974–1975)</li>
 </ul>
 </p>
 </body>
