--- a/FourColor/FourColor.html
+++ b/FourColor/FourColor.html
@@ -87,7 +87,7 @@ Identifying Four Color comics can be a challenge, as only issues published betwe
 </div></div>
 
 </p><p>
-1939 Series:<ul>
+1939 Series 1:<ul>
 <li><a href="FourColor1939series001.html">Four Color #1</a> Dick Tracy</li>
 <li><a href="FourColor1939series002.html">Four Color #2</a> Don Winslow</li>
 <li><a href="FourColor1939series003.html">Four Color #3</a> Myra North</li>
@@ -116,7 +116,7 @@ Identifying Four Color comics can be a challenge, as only issues published betwe
 </ul>
 
 </p><p>
-1942 Series:<ul>
+1942 Series 2:<ul>
 <li><a href="FourColor001.html">Four Color #1</a> Little Joe</li>
 <li><a href="FourColor002.html">Four Color #2</a> Harold Teen</li>
 <li><a href="FourColor003.html">Four Color #3</a> Alley Oop</li>
