--- a/MarvelCSS/MarvelCSS.html
+++ b/MarvelCSS/MarvelCSS.html
@@ -2,7 +2,8 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>Marvel Comics Super Special</title>
 </head>
 
@@ -18,13 +19,68 @@ These included, primarily, film and TV series adaptations, but also original and
 </p><p>
 Issue #7 was withdrawn after completion, and never published. Issue #8 was published in two editorially identical editions, one magazine-sized, one tabloid-sized.
 </p><p>
-The premiere issue, dated simply 1977, featured the rock band Kiss in a 40-page fictional adventure written by Steve Gerber, penciled by John Romita Jr., Alan Weiss, John Buscema, Rich Buckler, and Sal Buscema, which saw the quartet battling Marvel supervillains Mephisto and Doctor Doom.[1] The members of the band had samples of their blood mixed into the ink used to print the first issue.[2][3] Kiss reappeared in an occult adventure in issue #5 (1978). With that issue, the series' title in its postal indicia was shortened to Marvel Super Special.[4]
+The premiere issue, dated simply 1977, featured the rock band Kiss in a 40-page fictional adventure written by Steve Gerber, penciled by John Romita Jr., Alan Weiss, John Buscema, Rich Buckler, and Sal Buscema, which saw the quartet battling Marvel supervillains Mephisto and Doctor Doom. The members of the band had samples of their blood mixed into the ink used to print the first issue. Kiss reappeared in an occult adventure in issue #5 (1978). With that issue, the series' title in its postal indicia was shortened to Marvel Super Special.
 </p><p>
-Marvel's licensed pulp fiction character, Robert E. Howard's Conan the Barbarian, which was concurrently appearing in a long-running color comic book, starred in issues #2 (1977) and #9 (1978), with adaptations of the Arnold Schwarzenegger movies Conan the Barbarian[5] and Conan the Destroyer published as issues #21 (1982) and #35 (Dec. 1984), respectively. An adaptation of the movie starring Marvel's original spin-off character, Red Sonja, appeared as issue #38 (1985).[6] The other Marvel properties to be featured were the character Star-Lord in #10 (Winter 1979), the feature Weirdworld in #11-13 (Spring - Fall 1979),[4] and Howard the Duck in #41 (Nov. 1986), the final issue.[7]
+Marvel's licensed pulp fiction character, Robert E. Howard's Conan the Barbarian, which was concurrently appearing in a long-running color comic book, starred in issues #2 (1977) and #9 (1978), with adaptations of the Arnold Schwarzenegger movies Conan the Barbarian and Conan the Destroyer published as issues #21 (1982) and #35 (Dec. 1984), respectively. An adaptation of the movie starring Marvel's original spin-off character, Red Sonja, appeared as issue #38 (1985). The other Marvel properties to be featured were the character Star-Lord in #10 (Winter 1979), the feature Weirdworld in #11-13 (Spring - Fall 1979), and Howard the Duck in #41 (Nov. 1986), the final issue.
 </p><p>
-Issue #3 featured an adaptation of Close Encounters of the Third Kind by writer Archie Goodwin and artists Walt Simonson and Klaus Janson.[6] Simonson described working on the adaptation as "the worst experience of my comics career" due to the lack of visual reference and the inability of Marvel to obtain the likeness rights to the lead actors in the film.[8] Except for a biography of The Beatles in issue #4 (1978), the remainder adapted fantasy, science-fiction, and adventure films of the day, including Blade Runner, Dragonslayer, The Adventures of Buckaroo Banzai, and two Star Wars,[9][10] two Indiana Jones, and two James Bond movies, and such other films as Jaws 2 and the children's musical comedy The Muppets Take Manhattan.
+Issue #3 featured an adaptation of Close Encounters of the Third Kind by writer Archie Goodwin and artists Walt Simonson and Klaus Janson. Simonson described working on the adaptation as "the worst experience of my comics career" due to the lack of visual reference and the inability of Marvel to obtain the likeness rights to the lead actors in the film. Except for a biography of The Beatles in issue #4 (1978), the remainder adapted fantasy, science-fiction, and adventure films of the day, including Blade Runner, Dragonslayer, The Adventures of Buckaroo Banzai, and two Star Wars, two Indiana Jones, and two James Bond movies, and such other films as Jaws 2 and the children's musical comedy The Muppets Take Manhattan.
 </p><p>
 The sole TV series adaptation was of Battlestar Galactica in issue #8 (1978), which was published in two editorially identical editions, one magazine-sized, one tabloid-sized. This special was partially redrawn and expanded into three issues when Battlestar Galactica became a monthly comic book series. The adaptations of Star Trek: The Motion Picture (issue #15) and Blade Runner (issue #22) were also reprinted in standard comic book format.
+</p><p>
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="MarvelCSS1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="MarvelCSS2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="MarvelCSS3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="MarvelCSS4.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="MarvelCSS5.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="MarvelCSS6.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="MarvelCSS7.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="MarvelCSS8.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="MarvelCSS9.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="MarvelCSS10.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="MarvelCSS11.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="MarvelCSS12.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="MarvelCSS13.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="MarvelCSS14.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="MarvelCSS15.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="MarvelCSS16.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="MarvelCSS17.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="MarvelCSS18.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="MarvelCSS19.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="MarvelCSS20.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="MarvelCSS21.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="MarvelCSS22.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="MarvelCSS23.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="MarvelCSS24.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="MarvelCSS25.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="MarvelCSS26.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="MarvelCSS27.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="MarvelCSS28.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="MarvelCSS29.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="MarvelCSS30.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="MarvelCSS31.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="MarvelCSS32.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="MarvelCSS33.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="MarvelCSS34.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="MarvelCSS35.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="MarvelCSS36.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="MarvelCSS37.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="MarvelCSS38.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="MarvelCSS39.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="MarvelCSS40.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="MarvelCSS41.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+
 </p>
 </body>
 </html>
