--- a/MarvelTales/MarvelTales.html
+++ b/MarvelTales/MarvelTales.html
@@ -2,12 +2,11 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title> Marvel Tales </title>
 </head>
-
 <body>
-Marvel Tales<br>
 <img src="MarvelTales93.jpg"> <br>
 Series: 67 issues (#93-159) 1949-1957. 291 reprint issues (#1-291) 1964-1994.<br>
 Publisher: Atlas, Marvel<br>
@@ -15,6 +14,48 @@ Publisher: Atlas, Marvel<br>
 The series numbering continues from <a href="https://blzim.github.io/kb/Creation/MarvelComics/marvelcomics.html">Marvel Mystery Comics</a> (Marvel, 1939 series) #92<br>
 </p><p>
 1949 series #1: Cover art by Martin Nodell. "The Haunted Room," pencils by Gene Colan; A writer, working on a book about the ghosts of Europe, is sufficiently ill-advised to stay at a Hungarian inn with a haunted room; It transpires that the room is a rendezvous for supernatural creatures of the worst possible description. "The Gool Strikes!"; Doctor Kirby battles the giant monster called the Gool. "Step Into the Mirror of Madness!" "Out of the Past" text story. "Beware of the Cat!"; Story about were-pussycats in old China. "The Man Who Fled from the Future!", art by Gene Colan. 
+</p><p>
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="MarvelTales93.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="MarvelTales94.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="MarvelTales95.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="MarvelTales96.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="MarvelTales97.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="MarvelTales98.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="MarvelTales99.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="MarvelTales100.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="MarvelTales101.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="MarvelTales102.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="MarvelTales103.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="MarvelTales104.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="MarvelTales105.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="MarvelTales106.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="MarvelTales107.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="MarvelTales108.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="MarvelTales109.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="MarvelTales110.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="MarvelTales111.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="MarvelTales112.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="MarvelTales113.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="MarvelTales114.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="MarvelTales115.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="MarvelTales116.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="MarvelTales117.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="MarvelTales118.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="MarvelTales119.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="MarvelTales120.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+
 </p>
 </body>
 </html>
