--- a/template.html
+++ b/template.html
@@ -15,6 +15,14 @@ Written by <br>
 Illustrations by <br>
 <p>
 
+</p><p>
+Related Dark Horse Titles:<br>
+Mask Returns<br>
+Mask Strikes Back<br>
+Mask: Hunt for Green Oct<br>
+Mask: Southern Discomfort<br>
+Mask: Toys in Attic<br>
+Mask: World Tour<br>
 </p>
 </body>
 </html>
