--- a/KidSladeGunfighter/KidSladeGunfighter.html
+++ b/KidSladeGunfighter/KidSladeGunfighter.html
@@ -8,13 +8,14 @@
 
 <body>
 Kid Slade Gunfighter<br>
-<img src="KidSladeGunfighter.jpg"> <br>
-Series: #5-8 1957 continued from  Matt Slade, Gunfighter #4 <br>
+<img src="MattSladeGunfighter.jpg"> <img src="KidSladeGunfighter.jpg"> <br>
+Series: Matt Slade, Gunfighter (#1-4) 1956; Kid Slade, Gunfighter (#5-8) 1957 <br>
 Publisher: Atlas (Marvel)<br>
 Written by Stan Lee<br>
 Illustrations by Joe Maneely, Werner Roth, John Severin<br>
 <p>
-First issue of the title (continued from Matt Slade, Gunfighter). <br>
+Issue #1: "It's Matt Slade!" introduction and origin story. "The Stranger", "For his skill with guns", "Outlaw Town", "When Kelly Came to Town", Matt Slade was a man apart"
+<br>
 4 untitled Kid Slade stories (art by Joe Maneely, Werner Roth), plus a back-up story, "The Winner" (script by Stan Lee, art by John Severin). Two-page text story, "Man of Legend."
 </p>
 </body>
