--- a/NewAvengers/NewAvengers.html
+++ b/NewAvengers/NewAvengers.html
@@ -13,7 +13,7 @@ Publisher: Marvel<br>
 Written by Brian Michael Bendis<br>
 Illustrations by David Finch<br>
 <p>
-Shadowy figures with Lightning bolts, this is NOT the Director's Cut. "NEW AVENGERS" PART 1 (OF 5) .
+Shadowy figures with Lightning bolts, this is not the Director's Cut.
 </p><p>
 After the Devasting destruction of the orginal Avengers just what sort of threat to the world could persuade Captain America to assemble an all-new team? And after the events of AVENGERS DISASSEMBLED, who could possibly be on this team? How does Cap, Iron Man, Spider-Man and Wolverine sound? Get ready for the first of a proposed 500-issue run that signals an all-new era, the launch of the all-new ongoing Avengers series!
 </p>
