--- a/NewGods/NewGods.html
+++ b/NewGods/NewGods.html
@@ -2,12 +2,12 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../../../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>New Gods</title>
 </head>
 
 <body>
-<h2>New Gods</h2>
 <img src="NewGods001.jpg"> <br>
 Creator: Jack Kirby<br>
 Publisher: 1971 DC<br>
@@ -17,7 +17,31 @@ The New Gods are a fictional race appearing in the eponymous comic book series p
 The New Gods are natives of the twin planets of New Genesis and Apokolips. New Genesis is an idyllic planet filled with unspoiled forests, mountains, and rivers and is ruled by the Highfather, while Apokolips is a nightmarish, polluted and ruined dystopia filled with machinery and fire pits and is ruled by the tyrant Darkseid. The two planets were once part of the same world, a planet called Urgrund (German for "primeval ground"), but it was split apart millennia ago after the death of the Old Gods during Ragnarök. 
 </p><p>
 The characters associated with the New Gods are often collectively referred to as "Jack Kirby's Fourth World". Kirby began the "Fourth World" in Superman's Pal Jimmy Olsen #133 (Oct. 1970). The New Gods first appeared in New Gods #1 (Feb.-March 1971) and Forever People #1 (Feb.-March 1971). Another "Fourth World" title Mister Miracle was launched in April 1971. Various New Gods, notably Darkseid, went on to interact with other denizens of the DC Universe.
-</p>
+</p><p>
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="NewGods001.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="NewGods002.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="NewGods003.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="NewGods004.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="NewGods005.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="NewGods006.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="NewGods007.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="NewGods008.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="NewGods009.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="NewGods010.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+<p>
+
 Issues: <ul>
 <li><a href="NewGods.html">New Gods #1</a></li>
 <li><a href="NewGods002.html">New Gods #2</a></li>
