--- a/NewGods/NewGods010.html
+++ b/NewGods/NewGods010.html
@@ -2,29 +2,12 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../../../ZimStyles.css">
+<link rel="stylesheet" href="../ZimStyles.css">
 <title>New Gods</title>
 </head>
-
 <body>
-<h2>New Gods</h2>
+
 <img src="NewGods010.jpg"> <br>
-
-<p>
-
-</p>
-Issues: <ul>
-<li><a href="NewGods.html">New Gods #1</a></li>
-<li><a href="NewGods002.html">New Gods #2</a></li>
-<li><a href="NewGods003.html">New Gods #3</a></li>
-<li><a href="NewGods004.html">New Gods #4</a></li>
-<li><a href="NewGods005.html">New Gods #5</a></li>
-<li><a href="NewGods006.html">New Gods #6</a></li>
-<li><a href="NewGods007.html">New Gods #7</a></li>
-<li><a href="NewGods008.html">New Gods #8</a></li>
-<li><a href="NewGods009.html">New Gods #9</a></li>
-<li><a href="NewGods010.html">New Gods #10</a></li>
-</ul>
 
 </body>
 </html>
