--- a/NewGods/NewGods.html
+++ b/NewGods/NewGods.html
@@ -36,6 +36,15 @@ The characters associated with the New Gods are often collectively referred to a
 <div class="mySlides" style="text-align: center;"><img src="NewGods008.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="NewGods009.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="NewGods010.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="NewGods011.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="NewGods012.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="NewGods013.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="NewGods014.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="NewGods015.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="NewGods016.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="NewGods017.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="NewGods018.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="NewGods019.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
