--- a/NewGods/NewGods.html
+++ b/NewGods/NewGods.html
@@ -45,6 +45,40 @@ The characters associated with the New Gods are often collectively referred to a
 <div class="mySlides" style="text-align: center;"><img src="NewGods017.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="NewGods018.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="NewGods019.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="NewGods1984series001.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="NewGods1984series002.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="NewGods1984series003.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="NewGods1984series004.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="NewGods1984series005.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="NewGods1984series006.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="NewGods1989series001.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="NewGods1989series002.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="NewGods1989series003.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="NewGods1989series004.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="NewGods1989series005.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="NewGods1989series006.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="NewGods1989series007.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="NewGods1989series008.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="NewGods1989series009.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="NewGods1989series010.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="NewGods1989series011.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="NewGods1989series012.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="NewGods1989series013.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="NewGods1989series014.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="NewGods1989series015.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="NewGods1989series016.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="NewGods1989series017.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="NewGods1989series018.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="NewGods1989series019.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="NewGods1989series020.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="NewGods1989series021.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="NewGods1989series022.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="NewGods1989series023.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="NewGods1989series024.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="NewGods1989series025.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="NewGods1989series026.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="NewGods1989series027.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="NewGods1989series028.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
