--- a/NewGods/NewGods.html
+++ b/NewGods/NewGods.html
@@ -85,8 +85,8 @@ The characters associated with the New Gods are often collectively referred to a
 </div></div>
 <p>
 
-Issues: <ul>
-<li><a href="NewGods.html">New Gods #1</a></li>
+1971 series: <ul>
+<li><a href="NewGods001.html">New Gods #1</a></li>
 <li><a href="NewGods002.html">New Gods #2</a></li>
 <li><a href="NewGods003.html">New Gods #3</a></li>
 <li><a href="NewGods004.html">New Gods #4</a></li>
