--- a/NewGods/NewGods002.html
+++ b/NewGods/NewGods002.html
@@ -8,6 +8,12 @@
 <body>
 
 <img src="NewGods002.jpg"> <br>
-
+Cover pencils by Jack Kirby, inks by Vince Colletta, script and pencils by Jack Kirby, inks by Vince Colletta.
+<p>
+"O' Deadly Darkseid"<br>
+Orion explains the nature of the war against Darkseid to Lanza, Shane, Lincoln, and Lockman. 
+</p><p>
+Second full appearance of Darkseid.
+</p>
 </body>
 </html>
