--- a/NewGods/NewGods003.html
+++ b/NewGods/NewGods003.html
@@ -6,7 +6,11 @@
 <title>New Gods</title>
 </head>
 <body>
-<img src="NewGods003.jpg"> <br>
 
+<img src="NewGods003.jpg"> <br>
+Cover pencils by Jack Kirby, inks by Vince Colletta, script and pencils by Jack Kirby, inks by Vince Colletta.
+<p>
+"Death Is the Black Racer!" The Black Racer comes to earth and takes possession of the body of Willie Walker.
+</p>
 </body>
 </html>
