--- a/NewGods/NewGods004.html
+++ b/NewGods/NewGods004.html
@@ -8,6 +8,9 @@
 <body>
 
 <img src="NewGods004.jpg"> <br>
-
+Cover pencils by Jack Kirby, inks by Vince Colletta, script by Jack Kirby, pencils by Jack Kirby, inks by Vince Colletta. <br>
+<p>
+"O'Ryan Gang and the Deep Six" Orion stops Inter-Gang and their "Jammer". This Is Lightray! illustration by Jack Kirby, inks by Vince Colletta. Adventure Comics No. 73 ad, script by Whitney Ellsworth, art by Joe Simon and Jack Kirby. The Secret of the Buzzard's Revenge, script and art by Joe Simon and Jack Kirby. Kalibak the Cruel! illustration by Jack Kirby, inks by Vince Colletta. Coast Guard Reconnaissance starring Fred Nirschel, script and art by Joe Simon and Jack Kirby; war story reprinted from Boy Commandos #12.
+</p>
 </body>
 </html>
