--- a/NewGods/NewGods005.html
+++ b/NewGods/NewGods005.html
@@ -8,6 +8,10 @@
 <body>
 
 <img src="NewGods005.jpg"> <br>
-
+Cover pencils by Jack Kirby, inks by Mike Royer, script and pencils by Jack Kirby, inks by Mike Royer. 
+<p>
+"Spawn"<br>
+Orion battles Slig and the Deep Six. Kalibak arrives on Earth looking for Orion. Self-portrait of Jack Kirby, who introduces the Manhunter tale. Scavenger Hunt, script and art by Joe Simon and Jack Kirby. Introducing Fastbak, script and pencils by Jack Kirby, inks by Vince Colletta; Fastbak test his Aero-Pads and evades the Monitors.
+</p>
 </body>
 </html>
