--- a/NewGods/NewGods006.html
+++ b/NewGods/NewGods006.html
@@ -8,6 +8,9 @@
 <body>
 
 <img src="NewGods006.jpg"> <br>
-
+Cover pencils by Jack Kirby, inks by Vince Colletta, script and pencils by Jack Kirby, inks by Mike Royer. 
+<p>
+"The Glory Boat!"<br>
+Lightray and Orion battle the Deep Six while Farley and Richard Sheridan learn more about each other's views. Beware of Mr. Meek!, script and art by Joe Simon and Jack Kirby. Letter from comics writer Bob Rozakis. The Rocket Lanes of Tomorrow, script and art by Joe Simon and Jack Kirby.
 </body>
 </html>
