--- a/NewGods/NewGods007.html
+++ b/NewGods/NewGods007.html
@@ -8,6 +8,14 @@
 <body>
 
 <img src="NewGods007.jpg"> <br>
-
+Cover pencils by Jack Kirby, inks by Mike Royer, script and pencils by Jack Kirby, inks by Mike Royer.
+<p>
+"The Pact!" The history of the war between New Genesis and Apokolips is told, and the pact made between Izaya and Darkseid that brought a temporary peace between the two. 
+<p>
+"Vykin the Black!" Vykin stops a monster in the tunnels under New Genesis. 
+<br>
+"The Legend of the Silent Bear" script and art by Joe Simon and Jack Kirby. 
+<p>
+"A World of Thinking Machines" script and art by Joe Simon and Jack Kirby. 
 </body>
 </html>
