--- a/NewGods/NewGods008.html
+++ b/NewGods/NewGods008.html
@@ -8,6 +8,12 @@
 <body>
 
 <img src="NewGods008.jpg"> <br>
-
+Cover pencils by Jack Kirby, inks by Mike Royer, script and pencils by Jack Kirby, inks by Mike Royer. 
+The Death Wish of Terrible Turpin!<br>
+Kalibak and Orion battle, doing massive destruction, while Turpin and the Metropolis police force try to stop them.
+<p>
+"Beat the Black Racer!" Fastbak races Black Racer for the life of Esak. 
+<p>
+"The Stone of Vengeance!" script and art by Joe Simon and Jack Kirby.
 </body>
 </html>
