--- a/NewGods/NewGods009.html
+++ b/NewGods/NewGods009.html
@@ -8,6 +8,10 @@
 <body>
 
 <img src="NewGods009.jpg"> <br>
-
+Cover pencils by Jack Kirby, inks by Mike Royer, script and pencils by Jack Kirby, inks by Mike Royer.
+<p>
+"The Bug!" Forager is given the task of searching out Orion and help him stop Mantis from mobilizing all the bugs into a large army. 
+<p>
+"The Lady and the Tiger", script and art by Joe Simon and Jack Kirby. 
 </body>
 </html>
