--- a/NewGods/NewGods010.html
+++ b/NewGods/NewGods010.html
@@ -8,6 +8,8 @@
 <body>
 
 <img src="NewGods010.jpg"> <br>
-
+Cover pencils by Jack Kirby, inks by Mike Royer, script and pencils by Jack Kirby, inks by Mike Royer.
+<p>
+"Earth--the Doomed Dominion" Mantis and his bug army invade Earth.
 </body>
 </html>
