--- a/NewGods/NewGods.html
+++ b/NewGods/NewGods.html
@@ -79,6 +79,14 @@ The characters associated with the New Gods are often collectively referred to a
 <div class="mySlides" style="text-align: center;"><img src="NewGods1989series026.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="NewGods1989series027.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="NewGods1989series028.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="NewGods2008series001.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="NewGods2008series002.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="NewGods2008series003.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="NewGods2008series004.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="NewGods2008series005.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="NewGods2008series006.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="NewGods2008series007.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="NewGods2008series008.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -100,10 +108,10 @@ The characters associated with the New Gods are often collectively referred to a
 
 Series: <br>
 1971 - 1978 = 19 issues<br>
-1984 = 6 issues<br>
+1984 - 1984 = 06 issues<br>
 1989 - 1991 = 28 issues<br>
 1995 - 1997 = 18 issues<br>
-2007 - 2008 Death of the New Gods = 8 issues<br>
+2007 - 2008 = 08 issues (Death of the New Gods)<br>
 Also many collections and reprints.<br>
 </body>
 </html>
